{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 20,
  "lineage": "ec432820-c04e-6b76-583c-e8f43f9602e6",
  "resources": [
    {
      "module": "module.cluster-vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a3e22d50-c6e4-4c4b-bcc2-09661367865c",
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/virtualNetworks/emart-resource-cluster-vnet",
            "location": "eastus",
            "name": "emart-resource-cluster-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "tags": {
              "CSP": "Azure",
              "Environment": "default",
              "Owner": "Emart-group",
              "Project": "Emart"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "emart-resource-cluster-vnet",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.emart-sec-group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/networkSecurityGroups/emart-resource-cluster-nsg",
            "location": "eastus",
            "name": "emart-resource-cluster-nsg",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "security_rule": [],
            "tags": {
              "CSP": "Azure",
              "Environment": "default",
              "Owner": "Emart-group",
              "Project": "Emart"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "emart-resource-cluster-nsg",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.emart-sec-group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "deny_all",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "10250",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/networkSecurityGroups/emart-resource-cluster-nsg/securityRules/k8s_egress",
            "name": "k8s_egress",
            "network_security_group_name": "emart-resource-cluster-nsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "k8s_egress",
            "network_security_group_name": "emart-resource-cluster-nsg",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.emart-sec-group.azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/networkSecurityGroups/emart-resource-cluster-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "emart-resource-cluster-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "SSH",
            "network_security_group_name": "emart-resource-cluster-nsg",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.emart-sec-group.azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/networkSecurityGroups/emart-resource-cluster-nsg/securityRules/HTTPs_rule",
            "name": "HTTPs_rule",
            "network_security_group_name": "emart-resource-cluster-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "HTTPs_rule",
            "network_security_group_name": "emart-resource-cluster-nsg",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.emart-sec-group.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.emart-sec-group",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public-subnet-nsg-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/virtualNetworks/emart-resource-cluster-vnet/subnets/public_vm_subnet",
            "network_security_group_id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/networkSecurityGroups/emart-resource-cluster-nsg",
            "subnet_id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/virtualNetworks/emart-resource-cluster-vnet/subnets/public_vm_subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.cluster-vnet.azurerm_virtual_network.az_vnet",
            "module.emart-sec-group.azurerm_network_security_group.nsg",
            "module.public_subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.emart-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/networkInterfaces/public_vm_nic",
            "internal_domain_name_suffix": "kaw4fi5eyzfuzpgcbftbgz2gle.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "public_vm_nic-ip-config",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/publicIPAddresses/public_vm_ip",
                "subnet_id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/virtualNetworks/emart-resource-cluster-vnet/subnets/public_vm_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "public_vm_nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "emart-resource-cluster-default-rg",
            "tags": {
              "CSP": "Azure",
              "Environment": "default",
              "Owner": "Emart-group",
              "Project": "Emart"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "public_vm_nic",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.cluster-vnet.azurerm_virtual_network.az_vnet",
            "module.public_subnet.azurerm_subnet.subnet",
            "module.vm_public_ip.azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.emart-vm2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/networkInterfaces/private_vm_nic",
            "internal_domain_name_suffix": "kaw4fi5eyzfuzpgcbftbgz2gle.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "private_vm_nic-ip-config",
                "primary": true,
                "private_ip_address": "10.0.0.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/virtualNetworks/emart-resource-cluster-vnet/subnets/private_vm_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "private_vm_nic",
            "private_ip_address": "10.0.0.132",
            "private_ip_addresses": [
              "10.0.0.132"
            ],
            "resource_group_name": "emart-resource-cluster-default-rg",
            "tags": {
              "CSP": "Azure",
              "Environment": "default",
              "Owner": "Emart-group",
              "Project": "Emart"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "private_vm_nic",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.cluster-vnet.azurerm_virtual_network.az_vnet",
            "module.private_subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.emart_public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/publicIPAddresses/emart_vm_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.190.246.96",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "emart_vm_public_ip",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CSP": "Azure",
              "Environment": "default",
              "Owner": "Emart-group",
              "Project": "Emart"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/natGateways/public_vm_subnet",
            "idle_timeout_in_minutes": 4,
            "location": "eastus",
            "name": "public_vm_subnet",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "resource_guid": "f50ac184-d7d9-4a2d-bc86-5641923862ba",
            "sku_name": "Standard",
            "tags": {
              "CSP": "Azure",
              "Environment": "default",
              "Owner": "Emart-group",
              "Project": "Emart"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "public_vm_subnet",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.cluster-vnet.azurerm_virtual_network.az_vnet",
            "module.public_subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "nat_pip_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/natGateways/public_vm_subnet|/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/publicIPAddresses/nat_ip_name",
            "nat_gateway_id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/natGateways/public_vm_subnet",
            "public_ip_address_id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/publicIPAddresses/nat_ip_name"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.cluster-vnet.azurerm_virtual_network.az_vnet",
            "module.nat_gateway.azurerm_nat_gateway.nat_gw",
            "module.natgw_public_ip.azurerm_public_ip.public_ip",
            "module.public_subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/virtualNetworks/emart-resource-cluster-vnet/subnets/private_vm_subnet",
            "nat_gateway_id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/natGateways/public_vm_subnet",
            "subnet_id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/virtualNetworks/emart-resource-cluster-vnet/subnets/private_vm_subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.cluster-vnet.azurerm_virtual_network.az_vnet",
            "module.nat_gateway.azurerm_nat_gateway.nat_gw",
            "module.private_subnet.azurerm_subnet.subnet",
            "module.public_subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.natgw_public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/publicIPAddresses/nat_ip_name",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.189.177",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "nat_ip_name",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CSP": "Azure",
              "Environment": "default",
              "Owner": "Emart-group",
              "Project": "Emart"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.128/25"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/virtualNetworks/emart-resource-cluster-vnet/subnets/private_vm_subnet",
            "name": "private_vm_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "emart-resource-cluster-default-rg",
            "virtual_network_name": "emart-resource-cluster-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "private_vm_subnet",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64",
            "virtual_network_name": "emart-resource-cluster-vnet"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.cluster-vnet.azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/25"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/virtualNetworks/emart-resource-cluster-vnet/subnets/public_vm_subnet",
            "name": "public_vm_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "emart-resource-cluster-default-rg",
            "virtual_network_name": "emart-resource-cluster-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "public_vm_subnet",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "subscription_id": "bb281e30-cd5c-4513-96a2-ea645adb3c64",
            "virtual_network_name": "emart-resource-cluster-vnet"
          },
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg",
            "module.cluster-vnet.azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm_public_ip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bb281e30-cd5c-4513-96a2-ea645adb3c64/resourceGroups/emart-resource-cluster-default-rg/providers/Microsoft.Network/publicIPAddresses/public_vm_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.235.209.7",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "public_vm_ip",
            "resource_group_name": "emart-resource-cluster-default-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CSP": "Azure",
              "Environment": "default",
              "Owner": "Emart-group",
              "Project": "Emart"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.azure-rg.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}